--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,6 @@
-vendor/
-node_modules/
-
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-bootstrap/cache/
-.env.*.php
-.env.php
+/vendor
+/node_modules
+/public/storage
+Homestead.yaml
+Homestead.json
 .env
-
-# JetBrains IDE
-.idea
-*.iml
