--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,8 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+OAUTH_PROVIDER=null
+OAUTH_CLIENT=your-oauth-client-id
+OAUTH_SECRET=your-oauth-sercret
+OAUTH_REDIRECT=your-oauth-callback-redirect
