--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
+OAUTH_ONLY=true
 OAUTH_PROVIDER=null
 OAUTH_CLIENT=your-oauth-client-id
 OAUTH_SECRET=your-oauth-sercret
